# techblog_201912_errorprone

./: .gitignore  WORKSPACE  build.gradle  settings.gradle
custom-checks/: build.gradle
custom-checks/src/main/java/: BUILD.bazel  LombokDataAndBuilder.java
custom-checks/src/test/java/: BUILD.bazel  LombokDataAndBuilderTest.java
src/main/java/: BUILD.bazel  Example.java
